--- a/index.html
+++ b/index.html
@@ -3,6 +3,38 @@
 <head>
 	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script> 
 	<script src="https://api.trello.com/1/client.js?key=52742ca64caf750a15b0e2b63042aeca"></script>
+
+	<style type="text/css">
+		body {
+		    font-family: arial;
+		    font-size: 12px;
+		}
+
+		#loggedout {
+		    text-align: center;
+		    font-size: 20px;
+		    padding-top: 30px;
+		}
+		#loggedin { 
+		    display: none; 
+		}
+
+		#header {
+		    padding: 4px;
+		    border-bottom: 1px solid #000;
+		    background: #eee;
+		}
+
+		#output {
+		    padding: 4px;
+		}
+
+		.card { 
+		    display: block; 
+		    padding: 2px;
+		}
+
+	</style>
 </head>
 
 <body>
